[tool.poetry]
name = "sample_st"
version = "0.1.0"
description = ""
authors = ["sunao <if2kr9@bma.biglobe.ne.jp>"]

[tool.poetry.dependencies]
python = "3.8.10"
streamlit = "^1.8.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
